# switch-app

./: .gitignore  Cargo.toml  README.md  Xargo.toml  nacp.json
.cargo/: config
src/: _main.rs  main.rs  main_sdl2_only.rs  triangle.rs
