[package]
name = "switch-app"
version = "0.1.0"
edition = "2018"

[dependencies]
egui = "0.10.0"
egui_sdl2_gl = { git = "https://github.com/ArjunNair/egui_sdl2_gl.git", branch = "main", default-features = false }
gl = "0.14.0"
# libnx-rs = { package = "nx", git = "https://github.com/ischeinkman/libnx-rs", branch = "master" }
sdl2 = "0.34.3"

[patch.crates-io]
getrandom = { git = "https://github.com/skyline-rs/getrandom" }
